# DiffusionPokemon

./: .gitignore  .gitmodules  Dockerfile  Makefile  diffusion_autoencoder_blocks.py  docker-compose.yml  lambda_lab_setup.sh  pyproject.toml  train.py  vm_setup.sh
datasets/: __init__.py  datasets.py
diffusion_pokemon/: datasets.py  diffusion_autoencoder_blocks.py
diffusionpokemon/datasets/: datasets.py
diffusionpokemon/models/: __init__.py  autoencoder_blocks.py  ddpm_unet.py  diffusion_autoencoder_blocks.py  dino_decoder.py  resnet_vae.py  unet.py
diffusionpokemon/utils/: callbacks.py  datasets.py
kaggle_scripts/: cifarddpm.ipynb  ddpmtest.ipynb  pokemontest.ipynb
kaggle_scripts/.ipynb_checkpoints/: ddpmtest-checkpoint.ipynb
models/: __init__.py  autoencoder_blocks.py  callbacks.py  ddpm_unet.py  diffusion_autoencoder_blocks.py  diffusion_model.py  dino_vae.py  latent_ddpm_une.py  resnet_vae.py  unet.py  vae.py
notebooks/: diffusionpokemontorchlightning.ipynb  resnet_decoder.ipynb  resnet_vae_interactive__pca.ipynb
notebooks/lightning_logs/version_1/: metrics.csv
scripts/: understand_beta_schedule.ipynb
src/diffusionpokemon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
utils/: callbacks.py
