[project]
name = "diffusionpokemon"
version = "0.0.1"
dependencies = [
    "boto3>=1.37.19",
    "kaggle>=1.7.4.2",
    "matplotlib>=3.10.1",
    "protobuf>=5.29.4",
    "pytorch-lightning>=2.5.1",
    "torch==2.2.2",
    "torchvision>=0.17.2",
    "tqdm>=4.67.1",
    "wandb>=0.19.8",
    "numpy==1.26.4",
    "ipykernel",
    "python-dotenv",
    "s3fs",
]
requires-python=">=3.12, <3.13"

[tool.setuptools]
packages = ["diffusionpokemon"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true