[project]
name = "diffusionpokemon"
version = "0.0.1"
dependencies = [
    "boto3",
    "kaggle",
    "matplotlib",
    "protobuf",
    "pytorch-lightning",
    "torch==2.6.0",
    "torchvision",
    "tqdm,
    "wandb",
    "numpy",
    "ipykernel",
    "python-dotenv",
    "s3fs==2025.5.1",
]
requires-python=">=3.12, <3.13"

[tool.setuptools]
packages = ["diffusionpokemon"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true