[project]
name = "diffusionpokemon"
version = "0.0.1"
dependencies = [
    "boto3",
    "kaggle",
    "matplotlib",
    "protobuf",
    "pytorch-lightning==2.5.1",
    "torch==2.4.1",
    "torchvision",
    "tqdm",
    "wandb",
    "numpy",
    "ipykernel",
    "python-dotenv",
    "s3fs==2025.5.1",
    "scikit-learn"
]
requires-python=">=3.12, <3.13"

[tool.setuptools]
packages = ["diffusionpokemon"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true